src/parser/snapshots/coconut__parser__expression__tests__member_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"a.b\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "Identifier",
    "name": "a",
    "start": 0,
    "end": 1
  },
  "property": {
    "type": "Identifier",
    "name": "b",
    "start": 2,
    "end": 3
  },
  "computed": false,
  "start": 0,
  "end": 3
}
