src/parser/snapshots/coconut__parser__expression__tests__new_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_member_expr(\"new Array(1)\".into()).unwrap().1"
---
{
  "type": "NewExpression",
  "callee": {
    "type": "Identifier",
    "name": "Array",
    "start": 4,
    "end": 9
  },
  "arguments": [
    {
      "type": "Literal",
      "value": 1.0,
      "start": 10,
      "end": 11
    }
  ],
  "start": 0,
  "end": 12
}
