src/parser/snapshots/coconut__parser__expression__tests__new_expr-5.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"new Array(1,2)\".into()).unwrap().1"
---
{
  "type": "NewExpression",
  "callee": {
    "type": "Identifier",
    "name": "Array",
    "start": 4,
    "end": 9
  },
  "arguments": [
    {
      "type": "Literal",
      "value": 1.0,
      "start": 10,
      "end": 11
    },
    {
      "type": "Literal",
      "value": 2.0,
      "start": 12,
      "end": 13
    }
  ],
  "start": 0,
  "end": 14
}
