src/parser/snapshots/coconut__parser__expression__tests__new_expr.snap
---
source: src/parser/expression.rs
expression: "parse_member_expr(\"new Array()\".into()).unwrap().1"
---
{
  "type": "NewExpression",
  "callee": {
    "type": "Identifier",
    "name": "Array",
    "start": 4,
    "end": 9
  },
  "arguments": [],
  "start": 0,
  "end": 11
}
