src/parser/snapshots/coconut__parser__expression__tests__ternary_expr.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"true ? x : y\".into()).unwrap().1"
---
{
  "type": "ConditionalExpression",
  "test": {
    "type": "Literal",
    "value": true,
    "start": 0,
    "end": 4
  },
  "consequent": {
    "type": "Identifier",
    "name": "x",
    "start": 7,
    "end": 8
  },
  "alternate": {
    "type": "Identifier",
    "name": "y",
    "start": 11,
    "end": 12
  },
  "start": 0,
  "end": 12
}
